# electoral-equilibrium

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE.md  CODEBASE.md  DECISIONS.md  DOMAIN.md  ESPINOSA.md  FINDINGS.md  Justfile  LICENSE  NOTICE  QWEN.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
artifacts/: baseline_comparison.json
collectors/: apify.py  bluesky.py  reddit.py
configs/: archives.json  base.json  bin_uncertainty.json  gender_lexicon.json  language_priors.json  layer_weights.json  market_contracts.json  mmd_config.json  party_config.json  race_lexicon.json  religion_lexicon.json  shock_taxonomy.json  shocks.json  smoke.json  synthetic_events.json  train_r16.json  train_r32.json
deploy/: backend_router.py  hpc_vllm.sh  modal_app.py
docs/: baseline_comparison.md  baseline_interpretation.md  devplan.tex  latency_benchmark.md  mlx_smoke_run.txt  platform_correlations.md  prompt_candidates.md  research.tex  synthetic_event_taxonomy.md  tasks.tex
elec-equilibrium/: devvit.json  package-lock.json  package.json
electoral/: artifacts.py  config.py  pipeline.py  stages.py
rawdata/: SOURCE NOTES.md  anes_vcf_labels.json  audit_report.txt  column_maps.json  moment_inspection.md  spot_check.md
scripts/: LAGUNA_NOTES.md  _gen_newsom_synthetic.py  audit_panel.py  build_bio_labels.py  check_newsom.py  clean_with_llm.py  cnn_ssrs_poll_scraper.py  compile_hailo.py  discord_find_servers.py  discover_subreddits.py  export_shock_summary.py  filter_reddit_monthly.py  generate_synthetic.py  generate_synthetic_events.py  hpc_submit.sh  inspect_moments.py  outlines_poc.py  parse_3dlnews_html.py  pi_bio_server.py  prep_finetune.py  run_baseline_comparison.py  run_loco_validation.py  run_montecarlo_hopper.sh  sample_archives.py  score_array.sh  score_shock.py  sensitivity_analysis.py  symmetry_test.py  symmetry_test_events.py  train_setfit.py  validate_symmetry.py  verify_artifacts.py  verify_pipeline.py
tests/: conftest.py  test_artifact_roundtrip.py  test_artifact_schemas.py  test_baseline.py  test_bio_classifier.py  test_bootstrap.py  test_collectors.py  test_config.py  test_constraints.py  (+25 more)
(+129 files in other folders)
