[project]
name = "electoral-equilibrium"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
data = [
    "pandas>=2.0",
    "pyarrow>=12.0",
]
ml = [
    "scikit-learn>=1.3",
    "cvxpy>=1.4",
]
llm = [
    "transformers>=4.40",
    "peft>=0.10",
    "outlines>=0.0.46",
]
orchestration = [
    "prefect>=2.14",
]
scraper = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]
all = [
    "electoral-equilibrium[data,ml,llm,orchestration,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
