[project]
name = "electoral-equilibrium"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "cvxpy>=1.7.5",
    "numpy>=1.24",
    "pandas>=2.3.3",
    "pydantic>=2.0",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
data = [
    "pandas>=2.0",
    "pyarrow>=12.0",
    "vaderSentiment>=3.3.2",
    "zstandard>=0.22",
]
ml = [
    "scikit-learn>=1.3",
    "cvxpy>=1.4",
]
llm = [
    "transformers>=4.40",
    "peft>=0.10",
    "outlines>=0.0.46",
]
orchestration = [
    "prefect>=2.14",
]
scraper = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.10",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black==25.11.0",
    "ruff>=0.1",
]
all = [
    "electoral-equilibrium[data,ml,llm,orchestration,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["electoral"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.4.2",
    "ruff>=0.15.15",
]
